@@ -123,6 +123,14 @@ private:
     // common part of all constructors
     void Init();
 
+    // returns the tool identifier for the specified page
+    int PageToToolId(size_t page) const;
+
+    // returns the page index for the specified tool ID or
+    // wxNOT_FOUND if there is no page with that tool ID
+    int ToolIdToPage(int toolId) const;
+
+
     wxDECLARE_EVENT_TABLE();
     wxDECLARE_DYNAMIC_CLASS_NO_COPY(wxToolbook);
 };
